Fixing spacing issue with footer

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -48,3 +48,7 @@
     margin-top: 10px;
     border-top: 2px solid black;
 }
+
+.footer_space {
+    margin-bottom: 100px;
+}
